fixed dashboard and update swagger
